--- a/src/app/maxpercentages-results/maxpercentages-results.page.html
+++ b/src/app/maxpercentages-results/maxpercentages-results.page.html
@@ -1,16 +1,10 @@
 <ion-header>
-    <script src = 'maxpercentages-results.ts'> </script> <!--script tages are how I run functions without requiring a click or tap-->
-    <ion-buttons start>
-        <button ion-button menuToggle>
-            <ion-icon name = "menu"></ion-icon>
-        </button>
-    </ion-buttons>
-            
-    <ion-navbar color = 'dark'>
-         <ion-title text-center>
-            WeightFinder
-        </ion-title>
-    </ion-navbar>
+    <ion-button start menuToggle>
+        <ion-icon name = "menu"></ion-icon>
+    </ion-button>
+    <ion-title text-center>
+        WeightFinder
+    </ion-title>     
 </ion-header>
         
 <ion-content>
