--- a/src/app/max-percentages/max-percentages.page.html
+++ b/src/app/max-percentages/max-percentages.page.html
@@ -1,33 +1,34 @@
 <ion-header>
 
-    <ion-buttons start>
-        <button ion-button menuToggle>
-          <ion-icon name = "menu"></ion-icon>
-        </button>
-    </ion-buttons>
-
-    <ion-navbar color = 'dark'>
+        <ion-button start menuToggle>
+            <ion-icon name = "menu"></ion-icon>
+        </ion-button>
         <ion-title text-center>
-          WeightFinder
+            WeightFinder
         </ion-title>
-    </ion-navbar>
-
+        
 </ion-header>
 
 
 <ion-content padding>
 
-    <ion-item>
-        <ion-label text-center stacked> Enter Your One Rep Max </ion-label>
-        <ion-input text-center name = "orm" type= "number" [(ngModel)] = "oneRepMax" (input) = setORM(orm)></ion-input>
-        <ion-button (click) = 'changeDisplay()'>Calculate</ion-button>
-    </ion-item>
+    <ion-row align-items-center>
+        <ion-col align-self-center>
+            <ion-item>
+                <ion-label text-center stacked> Your One Rep Max </ion-label>
+                <ion-input text-center name = "orm" type= "number" [(ngModel)] = "oneRepMax"></ion-input>
+            </ion-item>
+        </ion-col>
+    </ion-row>
+    
+    
+    <ion-button (click) = 'changeDisplay()'>Calculate</ion-button>
 
-    <div id = "results">
-        <ion-list>
+    <div display = "none">
+        <ion-list id ="results" display = "none">
           <ion-list-header>Max Percentages</ion-list-header>
             <ion-item *ngFor= "let percent of percentages">
-                <ion-label> {{percent.value}}: {{percent.multiplier}}</ion-label>
+                <ion-label> {{percent.value}}%: {{percent.multiplier}}</ion-label>
                 <ion-button (click) = "checkUpDown(percent.multiplier)">Round</ion-button>
                 <p id = "round" display = "none">{{rounded}}</p>
             </ion-item>
