--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,16 +1,19 @@
 <ion-tabs>
-      <ion-tab tab="max-find">
-        <ion-icon name = "calculator"></ion-icon>
-        <ion-label>1RM</ion-label>
-      </ion-tab>
-      <ion-tab tab ="weight-find">
-        <ion-icon name="calculator"></ion-icon>
-        <ion-label>Bar Loader</ion-label>
-      </ion-tab>
-      <ion-tab tab="max-percentage">
-        <ion-icon name ="clipboard"></ion-icon>
-        <ion-label>Percentages of Max</ion-label>
-      </ion-tab>
+  <ion-tab-bar>
+      <ion-tab-button tab="tab1">
+          <ion-icon name = "calculator"></ion-icon>
+          <ion-label>1RM</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab ="tab2">
+          <ion-icon name="calculator"></ion-icon>
+          <ion-label>Bar Loader</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="tab3">
+          <ion-icon name ="clipboard"></ion-icon>
+          <ion-label>Percentages of Max</ion-label>
+      </ion-tab-button>
+  </ion-tab-bar>
+          
 </ion-tabs>
 
 
