--- a/src/app/weight-finder-results/weight-finder-results.page.html
+++ b/src/app/weight-finder-results/weight-finder-results.page.html
@@ -1,17 +1,11 @@
 <ion-header>
-
-    <ion-buttons start>
-      <ion-button menuToggle>
-        <ion-icon name ="menu"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-
-    <ion-navbar color = 'dark'>
-      <ion-title text-center>
-        LiftAssist
-      </ion-title>
-    </ion-navbar>
-  </ion-header>
+    <ion-button start menuToggle>
+        <ion-icon name = "menu"></ion-icon>
+    </ion-button>
+    <ion-title text-center>
+        WeightFinder
+    </ion-title>     
+</ion-header>
 
 <ion-content padding>
 
@@ -24,6 +18,6 @@
     </ion-item>
   </ion-list>
 
-  <ion-button (click) = "loadWeightFinderPage()">Find Another Weight</ion-button>
+  
 
 </ion-content>
