--- a/lifting-records/lifting-records.page.scss
+++ b/lifting-records/lifting-records.page.scss
@@ -2,3 +2,12 @@
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: #ffffff;
 }
+#sliding-item{
+    background-color: white;
+}
+.content{
+    background-color: white;
+}
+.record-list{
+    background-color: #ffffff;
+}
